--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 shmcat - a tool to dump System V shared memory segments, files and text
-(C) 2012 by Stefan Gast <sgdev@arcor.de>
+(C) 2012 by Stefan Gast
 
 This is free software.  You may redistribute copies of it under the terms of
 the GNU General Public License <http://www.gnu.org/licenses/gpl.html>.
@@ -7,7 +7,7 @@ There is NO WARRANTY, to the extent permitted by law.
 
 License: GPLv2 or later
 
-Report bugs to: sgdev@arcor.de
+Report bugs to: sgdev at arcor dot de
 
 Compile and install in the usual GNU way:
 	cd SUBDIR
