--- a/po/shmcat.pot
+++ b/po/shmcat.pot
@@ -1,5 +1,5 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Stefan Gast <sgdev@arcor.de>
+# Copyright (C) YEAR Stefan Gast
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: shmcat 1.3\n"
-"Report-Msgid-Bugs-To: sgdev@arcor.de\n"
-"POT-Creation-Date: 2012-03-04 22:47+0100\n"
+"Report-Msgid-Bugs-To: sgdev at arcor dot de\n"
+"POT-Creation-Date: 2012-03-08 15:32+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
