--- a/man/de/shmcat.man
+++ b/man/de/shmcat.man
@@ -1,7 +1,7 @@
-.TH SHMCAT "1" "September 2012" "shmcat(1)"
+.TH SHMCAT "1" "Oktober 2012" "shmcat(1)"
 .SH NAME
 shmcat \- System V Shared-Memory-Segmente, Dateien, Standardeingabe und/oder Text ausgeben
-.SH ÜBERSICHT
+.SH \(:UBERSICHT
 .B shmcat [
 .I OPTION
 .B ]... [
@@ -10,16 +10,16 @@ shmcat \- System V Shared-Memory-Segmente, Dateien, Standardeingabe und/oder Tex
 .SH BESCHREIBUNG
 System V Shared-Memory-Segmente, Dateien, die Standardeingabe und/oder Text
 auf der Standardausgabe ausgeben. Wenn kein OPERAND angegeben wurde, wird nur
-die Standardeingabe gelesen. Falls mehrere OPERANDen übergeben wurden, so
+die Standardeingabe gelesen. Falls mehrere OPERANDen \(:ubergeben wurden, so
 werden diese in der angegebenen Reihenfolge verarbeitet. Wenn einige der
-OPERANDen nicht gelesen werden können, dann wird eine Fehlermeldung auf die
+OPERANDen nicht gelesen werden k\(:onnen, dann wird eine Fehlermeldung auf die
 Standardfehlerausgabe geschrieben und mit den anderen OPERANDen fortgefahren.
 .PP
-Wenn shmcat ohne Unterstützung für \fBgetopt_long(3)\fR kompiliert wurde,
-dann können nur die kurzen, aus einem Buchstaben bestehenden OPTIONen und
+Wenn shmcat ohne Unterst\(:utzung f\(:ur \fBgetopt_long(3)\fR kompiliert wurde,
+dann k\(:onnen nur die kurzen, aus einem Buchstaben bestehenden OPTIONen und
 OPERANDen verwendet werden. Ansonsten werden auch die langen Varianten
-unterstützt. Wenn eine lange OPTION oder ein langer OPERAND ein Argument
-benötigt, so gilt das auch für die kurzen Varianten.
+unterst\(:utzt. Wenn eine lange OPTION oder ein langer OPERAND ein Argument
+ben\(:otigt, so gilt das auch f\(:ur die kurzen Varianten.
 .SH OPTIONEN
 .TP
 \fB-h\fR, \fB-?\fR, \fB--help\fR
@@ -36,28 +36,28 @@ Den Inhalt der angegebenen Datei ausgeben.
 \fB-i\fR, \fB--stdin\fR
 Die Standardeingabe ausgeben.
 .TP
-\fB-M\fR, \fB--shmkey=\fISCHLÜSSEL\fR
-Das Shared-Memory-Objekt mit dem übergebenen Schlüssel ausgeben. Der
-Schlüssel kann als Dezimalzahl (ohne Präfix), Oktalzahl (mit einer \fB0\fR
-als Präfix) oder Hexadezimalzahl (mit \fB0x\fR als Präfix) übergeben werden.
-Man kann den Schlüssel beispielsweise über eines der Programme \fBipcs(1)\fR
-oder \fBftok(1)\fR erhalten.
+\fB-M\fR, \fB--shmkey=\fISCHL\(:USSEL\fR
+Das Shared-Memory-Objekt mit dem \(:ubergebenen Schl\(:ussel ausgeben. Der
+Schl\(:ussel kann als Dezimalzahl (ohne Pr\(:afix), Oktalzahl (mit einer \fB0\fR
+als Pr\(:afix) oder Hexadezimalzahl (mit \fB0x\fR als Pr\(:afix) \(:ubergeben
+werden. Man kann den Schl\(:ussel beispielsweise \(:uber eines der Programme
+\fBipcs(1)\fR oder \fBftok(1)\fR erhalten.
 .TP
 \fB-m\fR, \fB--shmid=\fIID\fR
-Das Shared-Memory-Objekt mit der übergebenen ID ausgeben. Die ID kann als
-Dezimalzahl (ohne Präfix), Oktalzahl (mit einer \fB0\fR als Präfix) oder
-Hexadezimalzahl (mit \fB0x\fR als Präfix) übergeben werden. Man kann die
-ID beispielsweise über das Kommando \fBipcs(1)\fR erhalten.
+Das Shared-Memory-Objekt mit der \(:ubergebenen ID ausgeben. Die ID kann als
+Dezimalzahl (ohne Pr\(:afix), Oktalzahl (mit einer \fB0\fR als Pr\(:afix) oder
+Hexadezimalzahl (mit \fB0x\fR als Pr\(:afix) \(:ubergeben werden. Man kann die
+ID beispielsweise \(:uber das Kommando \fBipcs(1)\fR erhalten.
 .TP
 \fB-n\fR, \fB--newline\fR
-Einen Zeilenumbruch hinzufügen.
+Einen Zeilenumbruch hinzuf\(:ugen.
 .TP
 \fB-t\fR, \fB--text=\fITEXT\fR
 Den angegebenen Text ausgeben.
-.SH RÜCKGABEWERTE
+.SH R\(:UCKGABEWERTE
 .TP
 0
-Kein Fehler, jeder gewünschte OPERAND wurde ausgegeben
+Kein Fehler, jeder gew\(:unschte OPERAND wurde ausgegeben
 .TP
 1
 Mindestens ein OPERAND konnte nicht ausgegeben werden, aber das Programm konnte mit den anderen OPERANDen (falls angegeben) fortfahren
@@ -68,11 +68,11 @@ Es gab einen schwerwiegenden Fehler. Normalerweise bedeutet das, dass shmcat nic
 10
 Das Programm wurde falsch aufgerufen
 .SH ANMERKUNGEN
-Wenn Sie Shared-Memory-Segmente ausgeben möchten, sollten Sie normalerweise
+Wenn Sie Shared-Memory-Segmente ausgeben m\(:ochten, sollten Sie normalerweise
 die Ausgabe von shmcat in eine Datei oder zu einem Programm wie \fBod(1)\fR
-umleiten, denn die Daten in einem Shared-Memory-Objekt haben üblicherweise
-ein binäres Format und können deshalb nicht-druckbare Zeichen enthalten.
-Außerdem sollten Sie die Prozesse anhalten, die in das Shared-Memory-Objekt
+umleiten, denn die Daten in einem Shared-Memory-Objekt haben \(:ublicherweise
+ein bin\(:ares Format und k\(:onnen deshalb nicht-druckbare Zeichen enthalten.
+Au\(sserdem sollten Sie die Prozesse anhalten, die in das Shared-Memory-Objekt
 schreiben, um einen konsistenten Speicherabzug zu erhalten.
 .SH AUTOR
 Stefan Gast
