--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 shmcat - a tool to dump shared memory segments, files and text
-(C) 2012 by Stefan Gast
+(C) 2012, 2014 by Stefan Gast
 
 This is free software.  You may redistribute copies of it under the terms of
 the GNU General Public License <http://www.gnu.org/licenses/gpl.html>.
@@ -35,7 +35,7 @@ complete list), for example:
 			and man pages. Currently only German translations are
 			available, so you probably want to use this option if
 			you are not a German speaker.
-	
+
 	--disable-ftok	Do not build the ftok utility.
 
 	--disable-posix-shm
