--- a/man/ftok.man
+++ b/man/ftok.man
@@ -1,4 +1,4 @@
-.TH FTOK "1" "September 2012" "ftok(1)"
+.TH FTOK "1" "August 2016" "ftok(1)"
 .SH NAME
 ftok \- calculate System V IPC keys using the \fBftok(3)\fR library function
 .SH SYNOPSIS
@@ -39,13 +39,13 @@ Show version information and quit.
 .SH EXIT CODES
 .TP
 0
-No errors, the key was calculated and printed
+No errors, the key was calculated and printed.
 .TP
 1
-There was an error calculating or printing the key
+There was an error calculating or printing the key.
 .TP
 10
-Wrong usage of the program
+Wrong usage of the program.
 .SH CAVEATS
 The \fBftok(1)\fR utility has the same limitations as the \fBftok(3)\fR library
 function. That means, there is no guarantee that the resulting key is unique.
