--- a/man/shmcat.man
+++ b/man/shmcat.man
@@ -75,19 +75,19 @@ Print the given text.
 .SH EXIT CODES
 .TP
 0
-No errors, every OPERAND requested was dumped
+No errors, every OPERAND requested was dumped.
 .TP
 1
 There was an error while opening or reading at least one OPERAND. If shmcat
 has been invoked with the \fB-S\fR or \fB--stop\fR option, the program stopped
 after this error, otherwise it tried to continue with the remaining OPERANDs
-(if given)
+(if given).
 .TP
 2
-There was a fatal error, usually this means that shmcat could not write to standard output
+There was a fatal error, usually this means that shmcat could not write to standard output.
 .TP
 10
-Wrong usage of the program
+Wrong usage of the program.
 .SH NOTES
 Usually, when you dump shared memory segments, you should redirect the
 output of shmcat to a file or a program like \fBod(1)\fR, because shared
